Fixes on how and where the navigation toggle button is and behaves on smaller screens ( phones )

--- a/MatchFixer-Web-App/wwwroot/css/navigation.css
+++ b/MatchFixer-Web-App/wwwroot/css/navigation.css
@@ -77,7 +77,44 @@
         justify-content: center;
         gap: 2em;
     }
+   
 }
+
+
+@media (max-width: 770px) {
+
+    .navbar-nav {
+        display: flex !important;
+        flex-direction: column;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+
+    .navbar-nav .nav-item:first-of-type{
+        margin-top: 4em;
+    }
+
+    .container-fluid {
+        min-height: 4em;
+    }
+
+    .navbar-toggler {
+        order: 1;
+    }
+
+    .container-fluid {
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+
+    #logo-abreviated-svg{
+        position: fixed;
+        top: 0.2em;
+        left: 0.2em;
+    }
+}
+
 
 .nav-item a:hover,
 #logout-button:hover {
